     a table/alias, hint text, and optional dialect name, and
     "hints" will be rendered in the appropriate place in the 
     statement.  Works for Oracle, Sybase, MySQL.  [ticket:921]
     
   - Fixed bug introduced in 0.6beta2 where column labels would 
     render inside of column expressions already assigned a label.
     [ticket:1747]

- postgresql
   - The psycopg2 dialect will log NOTICE messages via the
     "sqlalchemy.dialects.postgresql" logger name. 
     [ticket:877]

   - the TIME and TIMESTAMP types are now availble from the
     postgresql dialect directly, which add the PG-specific
     argument 'precision' to both.   'precision' and 
     'timezone' are correctly reflected for both TIME and 
     TIMEZONE types. [ticket:997]

- mysql
   - No longer guessing that TINYINT(1) should be BOOLEAN
     when reflecting - TINYINT(1) is returned.  Use Boolean/
     BOOLEAN in table definition to get boolean conversion
     behavior.  [ticket:1752]
     
- oracle
   - The Oracle dialect will issue VARCHAR type definitions
     using character counts, i.e. VARCHAR2(50 CHAR), so that
     the column is sized in terms of characters and not bytes.
     Column reflection of character types will also use
     ALL_TAB_COLUMNS.CHAR_LENGTH instead of 
     ALL_TAB_COLUMNS.DATA_LENGTH.  Both of these behaviors take
     effect when the server version is 9 or higher - for 
     version 8, the old behaviors are used.  [ticket:1744]

- declarative
   - Using a mixin won't break if the mixin implements an 
     unpredictable __getattribute__(), i.e. Zope interfaces.
     [ticket:1746]

   - Using @classdecorator and similar on mixins to define 
     __tablename__, __table_args__, etc. now works if
     the method references attributes on the ultimate 
     subclass. [ticket:1749]
    
   - relationships and columns with foreign keys aren't 
     allowed on declarative mixins, sorry.  [ticket:1751]

- ext
    - The sqlalchemy.orm.shard module now becomes an extension,